<resources>
    <string name="app_name">"TennisScoringPrototype "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Authentication failed</string>
    <string name="register_action">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Tennis Scoring and Stats</string>
    <string name="login_progress_bar">Logging in...</string>
    <string name="register_activity_title">Register Activity</string>
    <string name="register_progress_title">Registering User</string>
    <string name="login_dialog_title">Invalid login details</string>
    <string-array name="player_names">
        <item>John Smith</item>
        <item>David Smith</item>
        <item>Jared Smith</item>
        <item>Daniel Smith</item>
    </string-array>
    <string-array name="match_types">
        <item>Singles</item>
        <item>Doubles</item>
    </string-array>
    <string-array name="match_sets">
        <item>1 Set</item>
        <item>3 Sets</item>
        <item>5 Sets</item>
    </string-array>
    <string name="title_activity_match_statistics">MatchStatisticsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_match">MatchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_match">Delete Match</string>
    <string name="delete_all_matches_option">Delete all matches</string>
    <string name="winner_status_tv">Winner:</string>
    <string name="incomplete_status_tv">Incomplete</string>
    <string name="double_fault_tv">Double Fault</string>
    <string name="fault_tv">Fault</string>
    <string name="friend_removed_iv">User removed as friend</string>
    <string name="friend_added_iv">User added as friend</string>
    <string name="login_pd">Please wait while you are logged in to your account</string>
    <string name="invalid_login_ad">Invalid login;</string>
    <string name="ok_ad">Ok</string>
    <string name="enter_valid_email_ad">Please enter a valid email address</string>
    <string name="enter_valid_password_ad">Please enter a valid password</string>
    <string name="authentication_failed_pd">Authentication failed.</string>
    <string name="scorecards_title">Scorecards</string>
    <string name="all_users_title">All Users</string>
    <string name="friends_title">Friends</string>
    <string name="no_player_selected_ad">No Player Selected</string>
    <string name="ok_2_ad">Ok</string>
    <string name="select_player_ad">Please select a player.</string>
    <string name="invalid_registration_ad">Invalid Registration</string>
    <string name="enter_valid_username_ad">Please enter a valid username</string>
    <string name="enter_valid_email_ad_2">Please enter a valid email address</string>
    <string name="enter_valid_password_ad_2">Please enter a valid password</string>
    <string name="passwords_not_match_ad">Passwords do not match</string>
    <string name="scorecards_tv">Scorecards</string>
    <string name="email_et">Email</string>
    <string name="password_et">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="status_tv">Status</string>
    <string name="player_1_tv">Player 1</string>
    <string name="player_1_2">Player 1</string>
    <string name="player_1_tv_2">Player 1</string>
    <string name="ace_btn">Ace</string>
    <string name="fault_btn">Fault</string>
    <string name="winner_btn">Winner</string>
    <string name="error_btn">Error</string>
    <string name="player_2_Tv">Player 2</string>
    <string name="ace_btn_2">Ace</string>
    <string name="fault_btn_2">Fault</string>
    <string name="winner_btn_2">Winner</string>
    <string name="error_btn_2">Error</string>
    <string name="best_of_tv">Best of</string>
    <string name="playing_against_tv">Playing against</string>
    <string name="choose_player_btm">Choose Player</string>
    <string name="player_to_serve_tv">Player to Serve</string>
    <string name="player_1_rb">Player 1</string>
    <string name="player2_rb">Player2</string>
    <string name="start_match_btn">Start Match</string>
    <string name="username_et">Username</string>
    <string name="email_et_2">Email</string>
    <string name="password_et_2">Password</string>
    <string name="confirm_password_et">Confirm password</string>
    <string name="register_btn_2">Register</string>
    <string name="status_tv_2">Status</string>
    <string name="player_1_tv_3">Player 1</string>
    <string name="player_1_tv_4">Player 1</string>
    <string name="person_name_tv">Person Name</string>
    <string name="example_email_tv">email@domain.com.au</string>
    <string name="person_name_tv_2">Person Name</string>
    <string name="example_email_tv_2">email@domain.com.au</string>
    <string name="you_tv">(You)</string>
    <string name="matches_item">Matches</string>
    <string name="all_users_item">All Users</string>
    <string name="friends_item">Friends</string>
    <string name="logout_item">Logout</string>
    <string name="new_match_lbl">New Match</string>
    <string name="register_lbl">Register</string>
    <string name="choose_player_lbl">Choose Player</string>
    <string name="scorecard_lbl">Scorecard</string>
    <string name="scorecards_lbl">Scorecards</string>
    <string name="login_tv">Login</string>
    <string name="new_account_tv">New Account</string>
    <string name="matches_title">Matches</string>
</resources>
