<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/matches"
            android:icon="@drawable/ic_view_agenda_black_48dp"
            android:title="@string/matches_item"
            android:checked="true"/>
        <item
            android:id="@+id/allUsers"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/all_users_item" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/friends_item" />
    </group>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit_to_app_black_48dp"
        android:title="@string/logout_item" />

</menu>
