<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.tennisscoringprototype.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/toolbar"
        android:gravity="center">

        <TextView
            android:id="@+id/loginTv"
            android:text="@string/new_account_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_et"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_et_2"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_et_2"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_et"
            android:inputType="textPassword"/>

            <Button
                android:id="@+id/registerBtn"
                android:text="@string/register_btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>
</RelativeLayout>
