<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mad.tennisscoringprototype.activity.MatchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/scoreLl"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_tv"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/player1NameTv"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/player_1_tv"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player1GamesTv"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:letterSpacing="0.5"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/player1ScoreTv"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.5"
                    android:background="@color/colorScore"
                    android:gravity="center"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/player1Iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.25"
                    android:src="@drawable/tennis_ball" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/player2NameTv"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/player_1_2"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player2GamesTv"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:letterSpacing="0.5"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/player2ScoreTv"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.5"
                    android:background="@color/colorScore"
                    android:gravity="center"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/player2Iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/tennis_ball"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player1ScoringLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/scoreLl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/player1Name2Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1_tv_2"
                    android:gravity="center_horizontal"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:id="@+id/player1ServeLl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/player1AceBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ace_btn"
                        android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored"/>
                    <Button
                        android:id="@+id/player1FaultBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fault_btn"
                        android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/player1WinnerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winner_btn"
                        android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored"/>

                    <Button
                        android:id="@+id/player1ErrorBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_btn"
                        android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button.Colored"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2ScoringLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/player1ScoringLl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/player2Name2Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2_Tv"
                    android:gravity="center_horizontal"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:id="@+id/player2ServeLl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/player2AceBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ace_btn_2"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/player2FaultBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fault_btn_2"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/player2WinnerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winner_btn_2"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/player2ErrorBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_btn_2"
                        android:layout_weight="1"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
