<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:focusable="true"

        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_tv_2"
                android:gravity="left"
                android:textSize="16dp"
                android:textStyle="italic"/>

            <LinearLayout
                android:id="@+id/player1Ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/statusTv">

                <TextView
                    android:id="@+id/player1NameTv"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1_tv_3"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="16dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player1GamesTv"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="16dp"
                    android:letterSpacing="0.5" />

                <TextView
                    android:id="@+id/player1ScoreTv"
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.75"
                    android:gravity="center"
                    android:background="@color/colorScore"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <ImageView
                    android:id="@+id/player1Iv"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/tennis_ball"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/player1Ll">

                <TextView
                    android:id="@+id/player2NameTv"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1_tv_4"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="16dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player2GamesTv"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="16dp"
                    android:letterSpacing="0.5" />

                <TextView
                    android:id="@+id/player2ScoreTv"
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.75"
                    android:gravity="center"
                    android:background="@color/colorScore"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />

                <ImageView
                    android:id="@+id/player2Iv"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/tennis_ball"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>